[package]
name = "secure-pass-keeper"
version = "0.1.0"
edition = "2021"
author = "Kalmykov Dmitry"

[dependencies]
rand = "0.8.4"
chrono = "0.4"
sha2 = { version = "0.10", default-features = false }
rust-crypto = "^0.2"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
flate2 = "1.0.22"
openssl = { version = "0.10", features = ["vendored"] }
ecies = "0.2.2"